[workspace]
default-members = []
members = [
  "cosmwasm/babylon-lst/contracts/reward",
  "cosmwasm/babylon-lst/contracts/liquidstaking/babylon",
  "cosmwasm/babylon-lst/contracts/cw20-base",
  "cosmwasm/babylon-lst/evm-ica",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
disallowed_types        = "deny"
module_inception        = "allow"
module_name_repetitions = "allow"
pedantic                = "warn"

[workspace.lints.rustdoc]
broken-intra-doc-links = "deny"

[workspace.dependencies]
alloy            = { version = "0.15.3", default-features = false }
bincode          = { version = "2.0.1", default-features = false }
cosmos-sdk-proto = { version = "0.27.0", default-features = false }
cosmwasm-schema  = { version = "2.2.2" }
cosmwasm-std     = { version = "2.2.2" }
cw-ownable       = { version = "2.1.0" }
cw-storage-plus  = { version = "2.0.0" }
cw-utils         = { version = "2.0.0" }
cw2              = { version = "2.0.0" }
cw20             = { version = "2.0.0" }
enumorph         = { version = "0.1.2" }
hex-literal      = { version = "1.0.0" }
ibc              = { version = "0.57.0", default-features = false }
prost            = { version = "0.13", features = ["derive"] }
schemars         = { version = "0.8.16" }
semver           = { version = "1.0" }
serde            = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_bytes      = { version = "0.11.15" }
thiserror        = { version = "1.0.58" }

# unionlabs
embed-commit         = { git = "https://github.com/unionlabs/union", default-features = false }
unionlabs-primitives = { git = "https://github.com/unionlabs/union", default-features = false }

# [dev-dependencies]
cw-multi-test   = { version = "2.2.0", features = ["staking"] }
serde-json-wasm = { version = "1.0.1" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = "thin"
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
