[workspace]
default-members = []
members = [
  "cosmwasm/babylon-lst/contracts/reward",
  "cosmwasm/babylon-lst/contracts/liquidstaking/babylon",
  "cosmwasm/babylon-lst/contracts/cw20-base",
  "cosmwasm/babylon-lst/evm-ica",
  "scripts/rust/create2-miner",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
disallowed_types        = "deny"
module_inception        = "allow"
module_name_repetitions = "allow"
pedantic                = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken-intra-doc-links = "deny"

[workspace.dependencies]
alloy            = { version = "0.15.3", default-features = false }
bincode          = { version = "2.0.1", default-features = false }
cosmos-sdk-proto = { version = "0.27.0", default-features = false }
cosmwasm-schema  = { version = "2.2.2" }
cosmwasm-std     = { version = "2.2.2" }
cw-ownable       = { version = "2.1.0" }
cw-storage-plus  = { version = "2.0.0" }
cw-utils         = { version = "2.0.0" }
cw2              = { version = "2.0.0" }
cw20             = { version = "2.0.0" }
cw20-base        = { path = "cosmwasm/babylon-lst/contracts/cw20-base", version = "0.0.0" }
enumorph         = { version = "0.1.2" }
hex              = { version = "0.4.3" }
hex-literal      = { version = "1.0.0" }
ibc              = { version = "0.57.0", default-features = false }
num_cpus         = { version = "1.17.0" }
prost            = { version = "0.13", features = ["derive"] }
rand             = { version = "0.9.2" }
rayon            = { version = "1.11.0" }
schemars         = { version = "0.8.16" }
semver           = { version = "1.0" }
serde            = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_bytes      = { version = "0.11.15" }
sha2             = { version = "0.10.9" }
thiserror        = { version = "1.0.58" }
tiny-keccak      = { version = "2.0.2", features = ["keccak"] }
vergen-git2      = { version = "1.0.7" }
bech32           = { version = "0.11.0" }

# unionlabs
embed-commit         = { git = "https://github.com/unionlabs/union", default-features = false }
ucs03-zkgm           = { git = "https://github.com/unionlabs/union", default-features = false }
unionlabs-primitives = { git = "https://github.com/unionlabs/union", default-features = false }
# [dev-dependencies]
cw-multi-test   = { version = "2.2.0", features = ["staking"] }
serde-json-wasm = { version = "1.0.1" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = "thin"
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
