[workspace]
resolver = "2"
members = [
  "unionlabs-primitives",
  "liquidstaking"
]

  
[workspace.package]
name = "escher"
version = "0.1.17"
authors = ["isakfm <isak.rickyanto@gmail.com>"]
edition = "2021"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nonunion)'] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true



[workspace.dependencies]
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }

base64                   = { version = "0.21", default-features = false }

alloy-primitives        = { version = "0.8.16", default-features = false }
bincode                  = { git = "https://github.com/bincode-org/bincode", default-features = false } #
generic-array            = { version = "0.14.7", default-features = false }
hex                      = { version = "0.4.3", default-features = false }
primitive-types          = { version = "0.12.1", default-features = false }
rlp                      = { version = "0.5.2", default-features = false }
typenum                  = { version = "1.17.0", default-features = false }
serde_json               = { version = "1.0.0", default-features = false, features = ["alloc"] }        # serde-
