[package]
authors = ["isakfm <isak.rickyanto@gmail.com>"]
edition = "2021"
name    = "reward"
version = "0.1.6"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["cosmwasm_1_4"] }
cw-ownable      = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
schemars        = { workspace = true }
semver          = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }

embed-commit = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
