[package]
edition     = "2021"
name         = "liquidstaking"
version      = "0.1.85"

[profile.dev]
lto = "thin"
strip = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nonunion)'] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""


[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = [
  "staking",
  "stargate",
  "cosmwasm_1_4",
  "cosmwasm_2_0",
] }

cw-storage-plus = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-ownable = "2.1.0"
semver = "1.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
enumorph = "0.1.2"
prost = { version = "0.13", features = ["derive"] }

[dependencies.unionlabs_primitives]
path = "../unionlabs-primitives"


[dev-dependencies]
cw-multi-test = { version = "2.2.0", features = ["staking"] }
