[package]
edition = "2021"
name    = "liquidstaking-union"
version = "0.1.72"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy                = { workspace = true, features = ["sol-types"] }
bincode              = { workspace = true, default-features = false, features = ["std"], optional = true }
cosmos-sdk-proto     = { workspace = true, default-features = false, features = ["cosmwasm"] }
cosmwasm-schema      = { workspace = true }
cosmwasm-std         = { version = "2.2.2", features = ["staking", "stargate", "cosmwasm_1_4", "cosmwasm_2_0"] }
cw-ownable           = { workspace = true }
cw-storage-plus      = { workspace = true }
cw2                  = { workspace = true }
cw20                 = { workspace = true }
enumorph             = { workspace = true }
hex-literal          = { workspace = true }
ibc                  = { workspace = true, features = ["borsh", "serde"] }
prost                = { workspace = true, features = ["derive"] }
schemars             = { workspace = true, optional = true }
semver               = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_bytes          = { workspace = true, optional = true }
thiserror            = { workspace = true }
unionlabs-primitives = { workspace = true, features = ["serde"] }
embed-commit         = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
union-test = { git = "https://github.com/unionlabs/union", package = "union-test", rev = "c9ebd27b5436106843888432bdf281ac65331eeb" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[features]
bincode  = ["dep:bincode"]
library  = []
schemars = ["dep:schemars"]
