[package]
edition = "2021"
name    = "liquidstaking"
version = "0.1.72"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
serde    = []
schemars = ["dep:schemars"]
bincode  = ["dep:bincode"]

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = [
  "staking",
  "stargate",
  "cosmwasm_1_4",
  "cosmwasm_2_0",
] }

cw-storage-plus = "2.0.0"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-ownable = "2.1.0"
semver = "1.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
enumorph = "0.1.2"
prost = { version = "0.13", features = ["derive"] }
serde_bytes      = { version = "0.11.15", optional = true }
bincode          = { version = "2.0.1", default-features = false, features = ["std"] , optional = true }
cosmos-sdk-proto = { version = "0.27.0", default-features = false, features = ["cosmwasm"] }
alloy = { version = "0.15.3", default-features = false, features = ["sol-types"] }
hex-literal = "1.0.0"
ibc ={ version = "0.57.0", default-features = false, features = ["borsh", "serde"]  }

[dependencies.unionlabs_primitives]
path = "../unionlabs-primitives"

[dev-dependencies]
cw-multi-test = { workspace = true }
