[package]
edition = "2021"
name    = "liquidstaking-union"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bincode              = { workspace = true, features = ["derive"] }
cosmwasm-schema      = { workspace = true }
cosmwasm-std         = { workspace = true, features = ["cosmwasm_2_0"] }
cw-utils             = { workspace = true }
cw2                  = { workspace = true }
cw20                 = { workspace = true }
depolama             = { workspace = true, features = ["iterator"] }
ibc-union-spec       = { workspace = true, features = ["serde", "bincode"] }
itertools            = "0.14.0"
on-zkgm-call-proxy   = { workspace = true, features = ["library"] }
prost                = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
schemars             = { workspace = true }
semver               = { workspace = true }
serde                = { workspace = true }
serde-utils          = { workspace = true }
serde_json           = "1.0"
sha2                 = "0.10.8"
thiserror            = { workspace = true }
unionlabs-encoding   = { workspace = true, features = ["bincode"] }
unionlabs-primitives = { workspace = true, features = ["bincode"] }

[dev-dependencies]
cw-multi-test = "0.17.0"
