[package]
name = "unionlabs_primitives"
edition      = "2021"
version = "0.0.1"

[dependencies]
alloy-primitives        = { version = "0.8.16", default-features = false, optional = true }
base64                   = { version = "0.21", default-features = false, optional = true,  features = ["std"]  }
bincode                  = { git = "https://github.com/bincode-org/bincode",  features = ["alloc"]  , optional = true }
generic-array            = { version = "0.14.7", default-features = false , optional = true }
hex                      = { version = "0.4.3", features = ["std"] }
rlp                      = { version = "0.5.2", default-features = false , optional = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"] , optional = true }
serde_bytes      = { version = "0.11.15", optional = true }
thiserror = { version = "1.0.58" }
typenum                  = { version = "1.17.0", default-features = false, optional = true }  
primitive-types          = { version = "0.12.1", default-features = false }  

[features]
default = ["serde", "base64"]

base64  = ["dep:base64"]
bincode = ["dep:bincode"]
rlp     = ["dep:rlp"]
serde   = ["dep:serde", "dep:serde_bytes"]

alloy-primitives-compat = ["dep:alloy-primitives"]
generic-array-compat    = ["dep:generic-array", "dep:typenum", "typenum/const-generics"]
primitive-types-compat  = []