[package]
authors = ["Isak Rickyanto <isak@favoritemedium.com>"]
edition = "2021"
name    = "evm-ica"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = { version = "1.5.3", default-features = false }
cosmwasm-std    = { version = "1.5.3", default-features = false, features = ["stargate"] }
cw-storage-plus = { version = "1.2.0", default-features = false }
serde           = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.57", default-features = false }


[dev-dependencies]
cosmos-sdk-proto = { version = "0.22.0", default-features = false }
