[package]
authors = ["Isak Rickyanto <isak@favoritemedium.com>"]
edition = "2024"
name    = "evm-ica"
version = "0.1.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["stargate"] }
cw-storage-plus = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
thiserror       = { workspace = true }

[dev-dependencies]
cosmos-sdk-proto = { workspace = true }
