[package]
edition = "2021"
name    = "milky_way"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32       = { workspace = true }
cosmwasm-std = { workspace = true }
schemars     = { workspace = true }
serde        = { workspace = true }
