[package]
authors       = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
description   = "Basic implementation of a CosmWasm-20 compliant token"
documentation = "https://docs.cosmwasm.com"
edition       = "2024"
homepage      = "https://cosmwasm.com"
license       = "Apache-2.0"
name          = "cw20-base"
repository    = "https://github.com/CosmWasm/cw-plus"
version       = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw20            = { workspace = true }
embed-commit    = { workspace = true }
schemars        = { workspace = true }
semver          = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
cw-multi-test = "2.0.0"
